<?php

namespace App\Models;

use App\Casts\AppDateTime;
use Illuminate\Database\Eloquent\Concerns\HasUuids;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class CheckInAttempt extends Model
{
    use HasUuids;

    public const UPDATED_AT = null;

    protected $fillable = [
        'scanned_by',
        'ticket_id',
        'event_id',
        'scanned_code',
        'method',
        'result',
        'created_at',
    ];

    protected function casts(): array
    {
        return [
            'created_at' => AppDateTime::class,
        ];
    }

    public function scanner(): BelongsTo
    {
        return $this->belongsTo(User::class, 'scanned_by');
    }

    public function ticket(): BelongsTo
    {
        return $this->belongsTo(Ticket::class);
    }

    public function event(): BelongsTo
    {
        return $this->belongsTo(Event::class);
    }
}
